--- a/.github/workflows/movie-dev.yml
+++ b/.github/workflows/movie-dev.yml
@@ -16,27 +16,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout branch
+        uses: actions/checkout@v4
 
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.24.4"
+          channel: "stable"
 
-      - name: Install dependencies
-        run: dart pub get
+      # Show the Flutter version.
+      - name: Show flutter configuration
+        run: |
+          flutter doctor -v
 
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
+      # Build and deploy.
+      - name: Building web
+        run: |
+          flutter build web --release --no-tree-shake-icons --pwa-strategy=none -t lib/main.dart
 
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
-
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
-      - name: Run tests
-        run: dart test
+      # Archive the web build.
+      - name: Archive the web build
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifact
+          path: build/web/
+          retention-days: 1
